# Prehistorik

./: .gitignore  CMakeLists.txt  README.md  install_dependancies.sh  install_sdl.sh  utils.sh
1codeFiles/: gestionAffichage.c  gestionDonnees.c  gestionEvenements.c  gestionSon.c  main.c  sdl2-light.c  sdl2-ttf-light.c  struct_level.c  struct_list.c  struct_ressources.c  struct_sprite.c  struct_world.c
2headers/: constantes.h  gestionAffichage.h  gestionDonnees.h  gestionEvenements.h  gestionSon.h  sdl2-light.h  sdl2-ttf-light.h  struct_level.h  struct_list.h  struct_ressources.h  struct_sprite.h  struct_world.h
3tests/: testSprite.c
4etc/: CHANGELOG.txt  README.md
4etc/Documentation html/: annotated.html  classes.html  constantes_8h.html  constantes_8h_source.html  dir_5918a52e814840ddfda234ae3633b378.html  dir_81dcb4fbdbb5fe76eed85b5aa407d6b0.html  dir_a66181155189a17b417746778d62bab6.html  files.html  functions.html  functions_vars.html  gestionAffichage_8c.html  gestionAffichage_8h.html  gestionAffichage_8h_source.html  gestionDonnees_8c.html  gestionDonnees_8h.html  gestionDonnees_8h_source.html  gestionEvenements_8c.html  gestionEvenements_8h.html  gestionEvenements_8h_source.html  gestionSon_8c.html  gestionSon_8h.html  gestionSon_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_func_b.html  globals_func_c.html  globals_func_f.html  globals_func_g.html  globals_func_h.html  globals_func_i.html  globals_func_l.html  globals_func_m.html  (+57 more)
(+154 files in other folders)
